# DaconETRIAI

./: .gitignore  README.md  data_summary.md  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
memory/: project_public_scores.md
scripts/: anchor_et_ensemble.py  baseline_subject_mean.py  build_feature_csv.py  catboost_gps_slim85_ensemble.py  catboost_optuna.py  cb_gps_slim80_personal_blend.py  cross_target_features.py  deep_sensor_features.py  dow_deviation_features.py  ensemble_et_lgb.py  ensemble_et_lgb_cb.py  et_cb_hgb_mlp_ensemble.py  et_gps_rolling_slim80_personal_blend.py  et_gps_slim80_alldata_ws.py  et_gps_slim80_calibrated.py  et_gps_slim80_cross_target.py  et_gps_slim80_global_ws_optuna.py  et_gps_slim80_pers_grid.py  et_gps_slim80_pers_pertarget.py  et_gps_slim80_personal_blend.py  et_gps_slim80_reg_tuning.py  et_gps_slim80_trans_sensorlag.py  et_gps_slim80_trans_varreg.py  et_gps_slim80_transductive.py  et_gps_slim80_ws_calibrated.py  et_ws_cv_transductive.py  extratrees_clip005_ensemble.py  extratrees_ensemble.py  extratrees_extreme_optuna.py  extratrees_gps_ensemble.py  extratrees_gps_pertarget_slim_ensemble.py  extratrees_gps_slim75_ensemble.py  extratrees_gps_slim80_ensemble.py  extratrees_gps_slim85_ensemble.py  extratrees_gps_slim_ensemble.py  extratrees_mble_ensemble.py  extratrees_optuna_v4.py  extratrees_semisup_ensemble.py  extratrees_v3_ensemble.py  extratrees_v3gps_slim_ensemble.py  (+74 more)
submission/: anchor_et_prob.csv  baseline_subject_mean.csv  catboost_gps_slim85_prob.csv  (+111 more)
(+2 files in other folders)
